--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,5 +8,15 @@ h1,h2,h3{
     color: rgb(48, 46, 46);
 }
 
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+h3,h4 {
+    font-weight: 400;
+    color: rgb(100,100,100)
+}
+
 @import "./song";
 @import "./player";
+@import "./library.scss"
